2020-XX-XX 4.1.4:

	General improvements:

	all : allowed `Any` as type parameter in `catch(e:SomeType<Any>)` (#9641)

	Bugfixes:

	php : fixed false detection of `catch` vars in anonymous functions as captured from outer scope
	php : fixed return type of extern definition for `fseek` function
	cs,java : fixed generation of `@:generic` classes with anonymous functions (#9799)
	flash : fixed loading swc libraries containing `Vector` without a type parameter (#9805)

2020-07-22 4.1.3

	General improvements:

	all : added an error on `return` outside of a function (#9659)
	php : support @:native("") for extern classes (#6448)
	python : support @:native("") for extern classes (#6448)

	Bugfixes:

	all : fixed compilation server bug caused by removing `inline` from a method (#9690)
	macro : fixed compiler crash if `@:genericBuild` meta is removed by a macro during building (#9391)
	jvm : fixed "--java-lib-extern" (#9515)
	flash : fixed var shadowing issue for variables captured in a closure inside of a loop (#9624)
	flash : fixed `VerifyError` exception when `Void` end up as an argument type after inlining (#9678)
	php : fixed runtime error "cannot use temporary expression in write context" for call arguments passed by reference
	cs : fixed `cs.Lib.rethrow` (#9738)
	nullsafety: fixed `@:nullSafety(Off)` in closures inside of constructors (#9643)
	nullsafety: fixed "Type not found NullSafetyMode_Impl_" (#9483)

2020-06-19 4.1.2

	Bugfixes:

	all : added `contains` and `keyValueIterator` methods to haxe.ds.ReadOnlyArray
	all : fixed super constructor call when extending externs (#7837, #9501)
	all : fixed compiler crash for "--run" argument without a value (#9513)
	all : fixed local variable name collision in `try..catch` (#9533)
	all : fixed memory leak in completion server related to haxe.Exception (#9537)
	display : fixed completion for out-of-bounds argument in a call (#9435)
	display : fixed "find references" through interfaces (#9470)